--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,30 @@
 .App {
   text-align: center;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   min-height: 100vh;
 }
 .navLinks{
   display: flex;
-  flex-direction: column;
-  width: 20%;
-  border-right: 1px solid #000;
+  flex-direction: row;
+  justify-content: flex-end;
+  align-content: center;
+  width: 100%;
+  height: 60px;
+  border-bottom: 1px solid #000;
+
+}
+.navLink{
+  margin: auto .8rem;
+  text-decoration: none;
+  color: #fff;
+  background: #366EFF;
+  padding: .8rem;
+  border-radius: 20px;
+}
+.content{
+  display: flex;
+  justify-content: center;
+  margin: auto;
 }
 
